--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             <nav class="navigation">
                 <a class="logo header-logo" href="./index.html">Web<span class="logo-name-two">Studio</span></a>
                 <ul class="navigation-list">
+
+                    <button class="header-menu" type="button" data-modal-close>
+                        <svg class="header-menu-icon" width="" height="">
+                            <use href="./images/icons.svg#icon-menu"></use>
+                        </svg>
+                    </button>
+
                     <li class="navigation-item">
                         <a class="navigation-name current" href="./index.html" target="_blank">Studio</a>
                     </li>
