--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
     <header class="header">
         <div class="container header-container">
             <nav class="navigation">
-                <a class="logo header-logo" href="./index.html">Web<span class="logo-name-two">Studio</span></a>
-                <ul class="navigation-list">
 
-                    <button class="header-menu" type="button" data-modal-close>
-                        <svg class="header-menu-icon" width="" height="">
-                            <use href="./images/icons.svg#icon-menu"></use>
-                        </svg>
-                    </button>
+                <a class="logo header-logo" href="./index.html">Web<span class="logo-name-two">Studio</span></a>
+                <div class="header-menu" data-modal-open>
+                    <svg class="header-menu-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-menu"></use>
+                    </svg>
+                </div>
+
+                <ul class="navigation-list">
 
                     <li class="navigation-item">
                         <a class="navigation-name current" href="./index.html" target="_blank">Studio</a>
