--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
                 <h2 class="specialists-title">Our Team</h2>
                 <ul class="specialists-list">
                     <li class="specialist-item">
-                        <img class="specialist-photo" src="./images/img4opt.jpg" width="264" height="260"
+                        <img class="specialist-photo" 
+                        srcset="./images/img4opt.jpg 1x, ./images/img4opt-2x.jpg 2x" src="./images/img4opt.jpg" width="264" height="260"
                             alt="Mark Guerrero. Product Designer">
                         <div class="specialist-text">
                             <h3 class="specialist-name">Mark Guerrero</h3>
@@ -251,7 +252,8 @@
                     </li>
 
                     <li class="specialist-item">
-                        <img class="specialist-photo" src="./images/img3opt.jpg" width="264" height="260"
+                        <img class="specialist-photo" 
+                        srcset="./images/img3opt.jpg 1x, ./images/img3opt-2x.jpg 2x" src="./images/img3opt.jpg" width="264" height="260"
                             alt="Tom Ford. Frontend Developer">
                         <div class="specialist-text">
                             <h3 class="specialist-name">Tom Ford</h3>
@@ -295,7 +297,8 @@
                     </li>
 
                     <li class="specialist-item">
-                        <img class="specialist-photo" src="./images/img2opt.jpg" width="264" height="260"
+                        <img class="specialist-photo" 
+                        srcset="./images/img2opt.jpg 1x, ./images/img2opt-2x.jpg 2x" src="./images/img2opt.jpg" width="264" height="260"
                             alt="Camila Garcia. Marketing">
                         <div class="specialist-text">
                             <h3 class="specialist-name">Camila Garcia</h3>
@@ -339,7 +342,8 @@
                     </li>
 
                     <li class="specialist-item">
-                        <img class="specialist-photo" src="./images/img1opt.jpg" width="264" height="260"
+                        <img class="specialist-photo" 
+                        srcset="./images/img1opt.jpg 1x, ./images/img1opt-2x.jpg 2x" src="./images/img1opt.jpg" width="264" height="260"
                             alt="Daniel Wilson. UI Designer">
                         <div class="specialist-text">
                             <h3 class="specialist-name">Daniel Wilson</h3>
@@ -392,7 +396,8 @@
                     <li class="portfolio-item">
 
                         <div class="portfolio-item-wrapper">
-                            <img class="portfolio-photo" src="./images/img5opt.jpg" width="360" height="300"
+                            <img class="portfolio-photo" 
+                            srcset="./images/img5opt.jpg 1x, ./images/img5opt-2x.jpg 2x" src="./images/img5opt.jpg" width="360" height="300"
                                 alt="Banking App">
                             <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
                                 Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -407,7 +412,8 @@
                     <li class="portfolio-item">
 
                         <div class="portfolio-item-wrapper">
-                            <img class="portfolio-photo" src="./images/img6opt.jpg" width="360" height="300"
+                            <img class="portfolio-photo" 
+                            srcset="./images/img6opt.jpg 1x, ./images/img6opt-2x.jpg 2x" src="./images/img6opt.jpg" width="360" height="300"
                                 alt="Cashless Payment">
                             <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
                                 Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -422,7 +428,8 @@
                     <li class="portfolio-item">
 
                         <div class="portfolio-item-wrapper">
-                            <img class="portfolio-photo" src="./images/img7opt.jpg" width="360" height="300"
+                            <img class="portfolio-photo" 
+                            srcset="./images/img7opt.jpg 1x, ./images/img7opt-2x.jpg 2x" src="./images/img7opt.jpg" width="360" height="300"
                                 alt="Meditation App">
                             <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
                                 Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -437,7 +444,8 @@
                     <li class="portfolio-item">
 
                         <div class="portfolio-item-wrapper">
-                            <img class="portfolio-photo" src="./images/img8opt.jpg" width="360" height="300"
+                            <img class="portfolio-photo" 
+                            srcset="./images/img8opt.jpg 1x, ./images/img8opt-2x.jpg 2x" src="./images/img8opt.jpg" width="360" height="300"
                                 alt="Taxi Service">
                             <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
                                 Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -452,7 +460,8 @@
                     <li class="portfolio-item">
 
                         <div class="portfolio-item-wrapper">
-                            <img class="portfolio-photo" src="./images/img9opt.jpg" width="360" height="300"
+                            <img class="portfolio-photo"
+                            srcset="./images/img9opt.jpg 1x, ./images/img9opt-2x.jpg 2x" src="./images/img9opt.jpg" width="360" height="300"
                                 alt="Screen Illustrations Design">
                             <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
                                 Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -467,7 +476,8 @@
                     <li class="portfolio-item">
 
                         <div class="portfolio-item-wrapper">
-                            <img class="portfolio-photo" src="./images/img10opt.jpg" width="360" height="300"
+                            <img class="portfolio-photo"
+                            srcset="./images/img10opt.jpg 1x, ./images/img10opt-2x.jpg 2x" src="./images/img10opt.jpg" width="360" height="300"
                                 alt="Girl looking at smartphone">
                             <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
                                 Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
