--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
             </div>
 
             <div class="footer-subscribe">
-                <p class="footer-text">Subscribe</p>
+                <p class="footer-subscribe-text">Subscribe</p>
                 <form class="form-footer" method="post" name="contacts" autocomplete="off">
                     <label class="footer-input"><input class="form-subscribe" name="footer-email" id="user-email" type="email"
                         placeholder="E-mail" required></label>
@@ -614,7 +614,11 @@
                         <svg width="10" height="8">
                             <use href="./images/icons.svg#icon-check"></use>
                         </svg>
-                    </span>I accept the terms and conditions of the <a class="signup-privacy" href="">Privacy Policy</a>
+                    </span>
+                </label>
+
+                <label class="signup-text-privacy" for="user-privacy">
+                        <span class="text-privacy">I accept the terms and conditions of the <a class="signup-privacy" href="">Privacy Policy</a></span>
                 </label>
             </div>
             
