--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
                     <li class="specialist-item">
                         <img class="specialist-photo" 
-                        srcset="./images/img2opt@1x.jpg 1x, ./images/img2opt@2x.jpg" src="./images/img2opt@1x.jpg" width="264" height="260"
+                        srcset="./images/img2opt@1x.jpg 1x, ./images/img2opt@2x.jpg 2x" src="./images/img2opt@1x.jpg" width="264" height="260"
                             alt="Camila Garcia. Marketing">
                         <div class="specialist-text">
                             <h3 class="specialist-name">Camila Garcia</h3>
